# Falaise_Modules

./: CMakeLists.txt  MyModulePipelineSD.conf.in  MyModuleSD.cpp
data/: event_1e.brio  event_2g.brio
